Fixed class path in composer

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "EASYREST\\": "lib"
+            "EASYREST\\": "src"
         }
     },
     "minimum-stability": "dev",
